// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration::select-mfa-options should return get security codes page 1`] = `
Object {
  "contentId": "95e26313-bc2f-49bc-bc62-fd715476c1d9",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::select-mfa-options should return validation error when mfa option not selected 1`] = `
Object {
  "contentId": "95e26313-bc2f-49bc-bc62-fd715476c1d9",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
